part3/3.02/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise-namespace
  name: pingponglog-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingponglog
  template:
    metadata:
      labels:
        app: pingponglog
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: pingponglog-configmap
      containers:
        - name: logger
          image: pyrynot/logger:3.02
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /config
        - name: reader
          image: pyrynot/reader:3.02
          imagePullPolicy: Always

        - name: pingpong-app
          image: pyrynot/pingpong-app:3.02
          imagePullPolicy: Always
          #volumeMounts:
            #- name: shared-storage
              #mountPath: /shared
