part3/3.02/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercise-namespace
  name: pingponglog-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingponglog-svc
            port:
              number: 8001
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingponglog-svc
            port:
              number: 8020
      - path: /latest_log
        pathType: Prefix
        backend:
          service:
            name: pingponglog-svc
            port:
              number: 8000
              #
